--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /* @import url('https://fonts.cdnfonts.com/css/infra'); */
 body {
     font-family: Infra;
+    max-width: 400px;
 }
 .card {
     border-color: black;
