--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     border-radius: 2em;
     border: 3px solid;
     width: 14em;
-    
+    position: relative;
     padding: 5%;
     display: flex;
     flex-direction: column;
@@ -50,46 +50,10 @@ body {
     z-index: 5;
     font-size: 3vw;
     width: 16em;
-    height: auto;
     transition: all 0.3s linear;
 }
 
 
-.title {
-    font-size: 2vw;
-    font-weight: 800;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.curse_content {
-    font-size: 1em;
-    font-weight: 400;
-    text-align: left;
-    max-width: 100%;
-}
-
-.casting_cost{
-    font-weight: 700;
-
-}
-
-.time_bonus_content{
-    text-align: center;
-    font-size: 4em;
-    font-weight: 800;
-    flex-grow: 0;
-    padding-top: 35%;
-
-}
-
-.time_bonus_static{
-    text-align: center;
-    font-size: 1.5em;
-    font-weight: 500;
-    justify-self: flex-start;
-    flex-grow: 1;
-}
 
 .powerup_content {
     text-align: center;
@@ -114,6 +78,7 @@ body {
     width: 100%;
     position: absolute;
     top: 0;
+    left: 0;
     z-index: 2;
     display: none;
 }
@@ -133,6 +98,7 @@ body {
 }
 .container{
     width: 100%;
+    left: 0;
     display: flex;
     justify-content: center;
     
@@ -201,6 +167,7 @@ body {
     position: absolute;
     top: 5%;
     width: 100%;
+    left: 0;
     justify-content: center;
 }
 
@@ -230,6 +197,7 @@ body {
     height: 30%;
     justify-content: space-around;
     width: 100%;
+    left: 0;
 }
 
 #import_button {
@@ -279,6 +247,7 @@ input[type="file"] {
 .qrcode_container{
     position: absolute;
     width: 100%;
+    left: 0;
     bottom: 0;
     text-align: center;
 }
@@ -290,6 +259,7 @@ input[type="file"] {
 text-align: center;
 width: 100%;
 height: 50%;
+left: 0;
 top: 0;
 }
 
